--- a/index.html
+++ b/index.html
@@ -66,11 +66,12 @@
                 <div class="card mb-3">
                     <div class="card-body">
                         <h5 class="card-title mt-3">Hercules</h5>
-                        <h6 class="card-subtitle my-3">A Tale Of Heroics!!!: February 25, 2023</h6>
+                        <h6 class="card-subtitle my-3">A Tale Of Heroics!!! On February 25, 2023 at 6:30 P.M.</h6>
                         <img src="images/hercules.jpeg" width="40%" class="img-fluid" alt="Super interesting image">
                       <p class="card-text">The Tales of the Labors Hercules must face, but with a twist! Come see a miraculous vision of Hercules hardship.</p>
-                      <p class="card-text"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quisquam facilis at facere ad 
-                        provident consequatur libero dolores culpa, natus assumenda porro tempora ratione corporis voluptates hic enim eos quia?
+                      <p class="card-text"> Cirque Theatre, 1313 Mockingbird Lane, Cherry Hill, NJ 
+                        Admission Adults $50, Children are Free</p>
+                        <article class="orange" id="hic"><input type="submit" value="Read More"></article>
                     </div>
                   </div>
 
@@ -78,11 +79,12 @@
                 <div class="card mb-3">
                     <div class="card-body">
                         <h5 class="card-title mt-3">Beauty and the Beast</h5>
-                        <h6 class="card-subtitle my-3">Will Love Conquer All!!?: February 26, 2023</h6>
+                        <h6 class="card-subtitle my-3">Will Love Conquer All!!? On February 26, 2023 at 2:30 P.M.</h6>
                         <img src="images/beautynbeast.jpg" width="40%" class="img-fluid" alt="Super interesting image">
                       <p class="card-text">Will love endure in this fabulous reinactment of forbidden love.</p>
-                      <p class="card-text"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quisquam facilis at facere ad 
-                        provident consequatur libero dolores culpa, natus assumenda porro tempora ratione corporis voluptates hic enim eos quia?
+                      <p class="card-text"> Cirque Theatre, 1313 Mockingbird Lane, Cherry Hill, NJ 
+                        Admission Adults $50, Children are Free</p>
+                        <article class="orange" id="hic"><input type="submit" value="Read More"></article>
                     </div>
                   </div>
                   <!-- third invite -->
@@ -90,11 +92,12 @@
                 <div class="card mb-3">
                     <div class="card-body">
                         <h5 class="card-title mt-3">Honey I Shrunk the Kids</h5>
-                        <h6 class="card-subtitle my-3">Mad Scientists Adventure!!!: February 25, 2023</h6>
+                        <h6 class="card-subtitle my-3">Mad Scientists Adventure!!! On February 25, 2023 at 2:30 P.M.</h6>
                         <img src="images/shrunk.jpg" img="20%" class="img-fluid" alt="Super interesting image">
                       <p class="card-text">A cooky scientist looking for his way to earning the Nobel prize reimagined with a new look on greed.</p>
-                      <p class="card-text"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quisquam facilis at facere ad 
-                        provident consequatur libero dolores culpa, natus assumenda porro tempora ratione corporis voluptates hic enim eos quia?
+                      <p class="card-text"> Cirque Theatre, 1313 Mockingbird Lane, Cherry Hill, NJ 
+                        Admission Adults $50, Children are Free</p>
+                        <article class="orange" id="hic"><input type="submit" value="Read More"></article>
                     </div>
                   </div>
 
@@ -102,11 +105,12 @@
                 <div class="card mb-3">
                     <div class="card-body">
                         <h5 class="card-title mt-3">Gremlins</h5> 
-                        <h6 class="card-subtitle my-3">A Haunting Show!!!: February 26, 2023</h6>
+                        <h6 class="card-subtitle my-3">A Haunting Show!!! On February 26, 2023 at 6:30 P.M.</h6>
                         <img src="images/gremlin.jpg" width="40%" class="img-fluid" alt="Super interesting image">
                       <p class="card-text">A darker take on mans desire for monsters in nature, that were not meant to be controlled.</p>
-                      <p class="card-text"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quisquam facilis at facere ad 
-                        provident consequatur libero dolores culpa, natus assumenda porro tempora ratione corporis voluptates hic enim eos quia?
+                      <p class="card-text"> Cirque Theatre, 1313 Mockingbird Lane, Cherry Hill, NJ 
+                        Admission Adults $50, Children are Free</p>
+                        <article class="orange" id="hic"><input type="submit" value="Read More"></article>
                     </div>
                   </div>
 
